# cruise_control

./: README.md  Rudimentary_Cruise_Control.pptx
cruise_control/: CMakeLists.txt  package.xml
cruise_control/Results/: Screencast from 07-30-2020 08:34:09 AM.webm  Screencast from 07-30-2020 08:35:14 AM.webm  Screencast from 07-30-2020 08:36:22 AM.webm
cruise_control/Rosbag/: Rosbag_0.db3  metadata.yaml
cruise_control/config/: config.json
cruise_control/docker/: Dockerfile
cruise_control/docs/Installation_Guides/: Docker_install_steps.txt  ros2_install_via_dpkg.txt
cruise_control/docs/dia/: Activity_diagram.dia  Block_diagram.dia  Class_Diagram.dia  State_diagram.dia
cruise_control/include/cruise_control/: algorithm_node.hpp  applied_acceleration.hpp  constants.hpp  ros.hpp  stub_node.hpp
cruise_control/include/datatypes/: datatypes.hpp
cruise_control/launch/: launch_cruise_control.py
cruise_control/msg/: AddressBook.msg
cruise_control/src/: algorithm_node.cpp  algorithm_node_main.cpp  applied_acceleration.cpp  stub_node.cpp  stub_node_main.cpp
